Added some design to the images

--- a/Pages/index1.html
+++ b/Pages/index1.html
@@ -22,6 +22,7 @@
 		img{
 			position: fixed relative;
 			padding: 20px;
+			background-color: #dddddd;
 		}
 		.highlights{font-family: armenian;}
 		li a{
