Moved css code to main

--- a/Pages/MoreAboutMe.html
+++ b/Pages/MoreAboutMe.html
@@ -2,40 +2,7 @@
 <html>
 <head>
 	<title>Kobe Wright | More About Me</title>
-	
-	<style type="text/css">
-		body{
-			font-family: courier;
-			background-color: orange;
-		}
-		h1{
-			text-decoration: underline;
-			text-align: center;
-			font-family: courier;
-			font-color: white;
-			display: block;
-			background-color: #dddddd;
-		}
-		h3{
-			text-decoration: underline;
-			text-align: center;
-			font-family: courier;
-			font-color: white;
-			display: block;
-			background-color: #dddddd;
-		}
-		li a{
-			display: block;
-			width: 120px;
-			background-color: #dddddd;
-			font-color: purple;
-			font-size: large;
-			font-style: italic;
-		}
-		a{
-			background-color: #dddddd;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="../CSS/main.css">
 </head>
 <body>
 	<h1>More About Me</h1>
