--- a/Pages/index1.html
+++ b/Pages/index1.html
@@ -2,45 +2,13 @@
 <html>
 <head>
 	<title>Kobe Wright | Home</title>
-	
-	<style type="text/css">
-		body{
-			background-color: orange;
-			font-family: courier;
-		}
-		h1{
-			text-decoration: underline;
-			text-align: center;
-			font-family: courier;
-			font-color: white;
-			display: block;
-			background-color: #dddddd;
-		}
-		p{
-			font-size: small;
-		}
-		img{
-			position: fixed relative;
-			padding: 20px;
-			background-color: #dddddd;
-		}
-		.highlights{font-family: armenian;}
-		li a{
-			display: block;
-			width: 120px;
-			background-color: #dddddd;
-			font-color: purple;
-			font-size: large;
-			font-style: italic;
-		}
-		a{
-			background-color: #dddddd;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="../CSS/main.css">
 </head>
 <body>
-	<h1>Kobe Wright</h1>
-	<br>
+	<div>
+		<h1>Kobe Wright</h1>
+		<br>
+	</div>
 	<h3>Welcome to the webpage, created by me!</h3>
 	<br>
 	
