--- a/Pages/MoreAboutMe.html
+++ b/Pages/MoreAboutMe.html
@@ -45,5 +45,17 @@
 		<li>Long Rides</li>
 	</ul>
 	<br>
+	<table>
+		<tr>
+			<th> First Name</th>
+			<th> Last Name</th>
+			<th> Gender</th>
+		</tr>
+		<tr>
+			<td> Kobe</td>
+			<td> Wright</td>
+			<td> Male</td>
+		</tr>
+	</table>
 </body>
 <html>
