Added GitHub link to the main web page

--- a/Pages/index1.html
+++ b/Pages/index1.html
@@ -15,7 +15,7 @@
 	<ul>
 		<li><a href="Stories.html"> Stories </a></li>
 		<li><a href="MoreAboutMe.html"> More About Me </a></li>
-		<li><a href=""> Contact </a></li>
+		<li><a href="https://github.com/Kobe2021/PreWork.git"> GitHub </a></li>
 	</ul>
 	<p>My name is Kobe Wright.
 	I work part time at a warehouse. 
