--- a/Pages/index1.html
+++ b/Pages/index1.html
@@ -9,14 +9,19 @@
 		<h1>Kobe Wright</h1>
 		<br>
 	</div>
+	<header>
 	<h3>Welcome to the webpage, created by me!</h3>
 	<br>
 	
-	<ul>
-		<li><a href="Stories.html"> Stories </a></li>
-		<li><a href="MoreAboutMe.html"> More About Me </a></li>
-		<li><a href="https://github.com/Kobe2021/PreWork.git"> GitHub </a></li>
-	</ul>
+		<nav>
+			<h3>Menu</h3>
+			<ul>
+				<li><a href="Stories.html"> Stories </a></li>
+				<li><a href="MoreAboutMe.html"> More About Me </a></li>
+				<li><a href="https://github.com/Kobe2021/PreWork.git"> GitHub </a></li>
+			</ul>
+		</nav>
+	</header>	
 	<p>My name is Kobe Wright.
 	I work part time at a warehouse. 
 	I workout, and I enjoy hanging out with family and friends. I watch formula one racing, baseball, football, and basketball.
