--- a/Pages/MoreAboutMe.html
+++ b/Pages/MoreAboutMe.html
@@ -7,12 +7,19 @@
 <body>
 	<h1>More About Me</h1>
 	<br>
-	<ul>
-		<li><a href="Stories.html"> Stories </a></li>
-		<li><a href="MoreAboutMe.html"> More About Me </a></li>
-		<li><a href="index1.html"> Home Page </a></li>
-	</ul>
-	<br>
+	<header>
+		<h3>Welcome!</h3>
+		
+			<nav>
+				<h3>Menu</h3>
+				<ul>
+					<li><a href="Stories.html"> Stories </a></li>
+					<li><a href="MoreAboutMe.html"> More About Me </a></li>
+					<li><a href="index1.html"> Home Page </a></li>
+					<li><a href="https://github.com/Kobe2021/PreWork.git"> GitHub </a></li>
+				</ul>
+			</nav>
+		</header>
 	<h3>Education</h3>
 	<br>
 	<p>I graduated from Bowie State University in 2021. I received a Bachelor of Science degree in Computer Technology.
