Image updates to website

--- a/Pages/index1.html
+++ b/Pages/index1.html
@@ -47,6 +47,13 @@
 		<li>Outer Space/The cosmos</li>
 		<li>Trees</li>
 	</ul>
+	<section class="parent">
+        <div class="child" id="one"><img src="../images/IMG_0096.jpg" width="200px" height="350px"></div>
+        <div class="child" id="two"><img src="../images/IMG_0654.png" width="200px" height="300px"></div>
+        <div class="child" id="three"><img src="../images/IMG_20220615_103437_043.JPG" width="200px" height="250px"></div>
+        <div class="child" id="four"><img src="../images/IMG_50281.JPG" width="200px" height="270px"></div>
+        <div class="child" id="five"><img src="../images/Screenshot_20210524-185523_Gallery.jpg" width="200px" height="300px"></div>
+        <div class="child" id="six"><img src="../images/Screenshot_20211002-175017_Gallery.jpg" width="200px" height="350px"></div>
 </body>
 
 </html>
