Closed off the image section

--- a/Pages/index1.html
+++ b/Pages/index1.html
@@ -54,6 +54,7 @@
         <div class="child" id="four"><img src="../images/IMG_50281.JPG" width="200px" height="270px"></div>
         <div class="child" id="five"><img src="../images/Screenshot_20210524-185523_Gallery.jpg" width="200px" height="300px"></div>
         <div class="child" id="six"><img src="../images/Screenshot_20211002-175017_Gallery.jpg" width="200px" height="350px"></div>
+	</section>
 </body>
 
 </html>
