No real changes

--- a/Pages/index1.html
+++ b/Pages/index1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kobe Wright | Home</title>
+	<script src="/JS/script.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="../CSS/main.css">
+	<title>Kobe Wright | Home</title>
 </head>
 <body>
 	<div>
